add style to page and buttons

--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
@@ -12,44 +13,53 @@
 <body>
   <div class="container">
     <div id="intro">
+      <img src="images/elisa_profile_pic.jpg" alt="Picture of Elisa">
       <h1>Hi, my name is Elisa, a back-end developer based in Berlin.</h1>
       <p>My first passion was art conservation which was my main focus for the past 15 years. Then programming came along and swept me off my feet. I started with self teaching, then concluded a coding boot camp (@LeWagon) and am now working as a back end developer. Please feel free to look at my current and future projects and reach out to me.</p>
       </div>
       <div class="contact">
 
     </div>
-    <div class="projects">
-      <div id="project-1">
+    <div class="projects-container">
+      <div id="project-1" class="project">
         <h2>ElderMe</h2>
         <p>
          ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built using Ruby on Rails…
         </p>
         <div class="button">
-          <button>Go to Project</button>     <!-- Link to webpage (GitHub provided) -->
+          <a href="#" class="btn-project">Go to Project</a>
+              <!-- Link to webpage (GitHub provided) -->
 
-          <button >See Code</button>          <!-- Link to Git Hub repo -->
+          <a href="#" class="btn-project">See Code</a>
+               <!-- Link to Git Hub repo -->
         </div>
       </div>
-      <div id="project-2">
+      <div id="project-2" class="project">
         <h2>Visa Calculator</h2>
         <p>
           The visa calculator enables travellers to calculate one or multiple trips to a country or visa zone such as the Schengen Zone. The user can insert individual visa regulations such as ho many days out if a time frame you may be in the country. It informs the user how many days they can still use up or have to remove to not overstay the visit.
           This project was built using JavaScript and made use of the flatpickr as a datetime picker and is still a work in progress…
         </p>
         <div class="button">
-          <button>Go to Project</button>     <!-- Link to webpage (GitHub provided) -->
-          <button>See Code</button>          <!-- Link to Git Hub repo -->
+          <a href="#" class="btn-project">Go to Project</a>
+              <!-- Link to webpage (GitHub provided) -->
+
+          <a href="#" class="btn-project">See Code</a>
+               <!-- Link to Git Hub repo -->
         </div>
       </div>
-      <div id="project-3">
+      <div id="project-3" class="project">
         <h2>Flashcard App</h2>
         <p>
           This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
           This project will be build in Ruby on Rails and is in working progress…
         </p>
         <div class="button">
-          <button>Go to Project</button>     <!-- Link to webpage (GitHub provided) -->
-          <button>See Code</button>          <!-- Link to Git Hub repo -->
+         <a href="#" class="btn-project">Go to Project</a>
+              <!-- Link to webpage (GitHub provided) -->
+
+          <a href="#" class="btn-project">See Code</a>
+               <!-- Link to Git Hub repo -->
         </div>
       </div>
 
