add elderme casestudy page add link to page

--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
 
             <a href="#" class="btn-project">See Code</a>
                  <!-- Link to Git Hub repo -->
-            <a href="#" class="btn-project">Read case study</a>
+            <a href="casestudy_elderme.html" class="btn-project">Read case study</a>
 
           </div>
 
