add correct links to code

--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
             <a href="http://www.elderme.live/" class="btn-project">Go to Project</a>
                 <!-- Link to webpage (GitHub provided) -->
 
-            <a href="#" class="btn-project">See Code</a>
+            <a href="https://github.com/codersquirrelbln/elderme" class="btn-project">See Code</a>
                  <!-- Link to Git Hub repo -->
             <a href="casestudy_elderme.html" class="btn-project">Read case study</a>
 
@@ -76,7 +76,7 @@
                 <a href="https://codersquirrelbln.github.io/visa_calculator/" class="btn-project">Go to Project</a>
                     <!-- Link to webpage (GitHub provided) -->
 
-                <a href="#" class="btn-project">See Code</a>
+                <a href="https://github.com/codersquirrelbln/visa_calculator" class="btn-project">See Code</a>
                      <!-- Link to Git Hub repo -->
                 <a href="#" class="btn-project">Read case study</a>
 
