add table work in progress

--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -55,14 +55,25 @@
 
     <div>
       <h2>Difficulties and Solutions</h2>
+
       <p>
-        <img src="images/table_difficulties.png" alt="Table of difficulties" id="table_difficulties">
+        Difficulties | Solutions
+        ------------ | -------------
+
+        finding team dynamic | Accept and respect team members as individuals. Include everyone in decision process and set up guidelines together.
+        Conflicts about different levels of interest, investment |  Focus on yourself and your work, but also not losing right of team members, continuously involving team members in process and status updates. Ultimately accept that everyone has individual priorities. Nevertheless ask team members respectfully to contribute the parts they were assigned to and insist in them following the guidelines set up together before starting to code
+        Git, accidentally working on the master branch instead of creating a new feature branch | Making a Guidline with the different steps, for the first few days look continuously at list and follow step by step, regularity delete feature branches that are not needed anymore
+        Keeping an overview of the complex structure provided by the ruby on rails | FileIcons Plugin, closing folders as soon as they are not needed anymore, making sure the models and controllers and views follow naming conventions
+        Reading team members code | Make sure, all the naming conventions are followed and indentions are correct. User comments as much as needed so that someone new to team can easily catch up.
       </p>
+      <!-- <p>
+        <img src="images/table_difficulties.png" alt="Table of difficulties" id="table_difficulties">
+      </p> -->
     </div>
 
-    <div>
+<!--     <div>
       <h2>Collaboration</h2>
-    </div>
+    </div> -->
 
     <div>
       <h2>Open issues</h2>
