add content add collapsiblility add styling

--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -8,7 +8,7 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"> -->
 </head>
 <body>
-  <div class="container">
+  <div class="container collapsible">
     <!-- <div class="card-portfolio"> -->
     <div>
       <h2>Goal</h2>
@@ -30,7 +30,7 @@
     <div>
       <h2>Approach</h2>
       <p>
-        The guidelines of this project were specifying that all team members will work on both the front and back end. That brought its own difficulties with it. One were of a personal matter, a certain disinterest or disliking or insecurity in one area. The team members were supposed to be exposed to both areas.
+        The guidelines of this project were specifying that all team members will work on both the front and back end. That brought its own difficulties with it. One were of a personal matter, a certain disinterest or disliking or insecurity in one area.
       </p>
 
       <p>
@@ -41,15 +41,17 @@
     <div>
       <h3>First steps:</h3>
       <p>
-        Setup rails template, buy a domain name, set up server, Heroku etc.
-        We drew out the different page views with pen and paper.
-        Then we created a new trello project and created the different tasks with specific label colors.
-
-        We had different columns:
-        Overview: Held all the main groups of tasks, for example the groupings of MVC, model, view and controller, Styling, pop-ups. These cards will not be moved but stay to be consulted and updated, checking off the individual tasks that are in the checklist, that correspond with additional cards
-        To Do, Started, Review, Done. Every individual card corresponds with a feature branch (ideally named the same or similar)
-        In all other columns the cards hold individual tasks that are summed up in the overview cards. They can be assigned individually and get moved from To Do to started to the review (meaning they are finished and pushed to gitHub and are in the process of being reviewed by all other team members). Once the changes are reviewed and approved by everyone, the feature branch holding the changes, will be merged into the master branch, everyone pulls the updated master branch and continue working. The card can be finally moved to the DONE column.
-        All individual cards must have the same color label as the overview cards. Use labels for colourblind to be more inclusive
+        <ul>
+          <li>Setup the rails template, buy a domain name, set up server - Heroku</li>
+          <li>We drew out the different page views with pen and paper.</li>
+          <li>Then we created a new trello project and created the different tasks with specific label colors.</li>
+          <li>We had different columns:
+            Overview: Held all the main groups of tasks, for example the groupings of MVC, model, view and controller, Styling, pop-ups. These cards will not be moved but stay to be consulted and updated, checking off the individual tasks that are in the checklist, that correspond with additional cards
+            To Do, Started, Review, Done. Every individual card corresponds with a feature branch (ideally named the same or similar)
+            In all other columns the cards hold individual tasks that are summed up in the overview cards. They can be assigned individually and get moved from To Do to started to the review (meaning they are finished and pushed to gitHub and are in the process of being reviewed by all other team members). Once the changes are reviewed and approved by everyone, the feature branch holding the changes, will be merged into the master branch, everyone pulls the updated master branch and continue working. The card can be finally moved to the DONE column.
+           All individual cards must have the same color label as the overview cards. Use labels for colourblind to be more inclusive
+          </li>
+        </ul>
       </p>
     </div>
 
@@ -75,18 +77,6 @@
       <h2>Collaboration</h2>
     </div> -->
 
-    <div>
-      <h2>Open issues</h2>
-      <p>
-        <ul>
-          <li>Add an OAuth to sign in with gmail or facebook</li>
-          <li>Add a feature that shows volunteers with same interest within certain radius.</li>
-          <li>Add feature to upload a profile picture and a video</li>
-          <li>Add a feature of subtitles on video.</li>
-          <li>Make the webpage more accessible. Try a screenreader and know what it still needs.</li>
-        </ul>
-      </p>
-    </div>
 
     <div>
       <h2>Lessons learned</h2>
@@ -131,6 +121,19 @@
           Focus on yourself and your tasks but don’t loose sight of what the rest of the team are up to.
         </li>
       </ul>
+    </div>
+
+    <div>
+      <h2>Open issues</h2>
+      <p>
+        <ul>
+          <li>Add an OAuth to sign in with gmail or facebook</li>
+          <li>Add a feature that shows volunteers with same interest within certain radius.</li>
+          <li>Add feature to upload a profile picture and a video</li>
+          <li>Add a feature of subtitles on video.</li>
+          <li>Make the webpage more accessible. Try a screenreader and know what it still needs.</li>
+        </ul>
+      </p>
     </div>
   </div>
 
