--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 
@@ -23,6 +25,14 @@
          <p>
           My first passion was art conservation which was my main focus for the past 15 years. Then programming came along and swept me off my feet. I started with self teaching, then concluded a coding boot camp <a href="https://www.lewagon.com/" target="_blank"><img src="images/le-wagon-0e68fc00a50ff351516ca01212d2dd940b4b2b89f3dd1ddaa1c83b307cd829eb.png" alt="icon leWagon" id="le-wagon-picture"></a> and am now working as a back end developer. Please feel free to look at my current and future projects and reach out to me.
         </p>
+        <ul class="list-inline">
+        <a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+        <li>Email: codersquirrelbln@gmail.com</li>
+
+        </ul>
+        </div>
         <div>
           <!-- insert icons -->
         </div>
@@ -296,3 +306,57 @@
 
 </body>
 </html>
+
+
+<!--
+ <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+          <h2 class="small">Great eaters</h2>
+          <img src="images/s_2.jpeg" alt="beautiful squirrel eating a nut" width="200" class="img rounded-circle">
+          <p>
+            Squirrels are <strong>very great</strong> eaters! They love nuts and fruits and all sorts of veggies, but not brussel sprouts, they hate brussel sprouts!
+          </p>
+        </div>
+
+
+
+        <div class="col-12 col-sm-6 col-md-4">
+          <h2 class="small">Curiosity</h2>
+          <img src="images/curious.jpg" alt="Curious Squirrel" width="250" class="img rounded-circle">
+          <p>Squirrels are <strong>very</strong> curious animals, they will be tempted to get to know all foods, other animals and learn different languages!</p>
+      </div>
+
+        <div class="col-12 col-sm-6 col-md-4">
+          <h2 class="small">Good moms</h2>
+          <img src="images/s_1.jpeg" alt="Squirrel Mom with kids" width="250" class="img rounded-circle">
+          <p>Squirrel moms take <em>great</em> care of their babies. They are stricts but fair</p>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4">
+          <h2 class="small">Geselligkeit</h2>
+          <img src="images/s_4.jpeg" alt="Squirrels" width="250" class="img rounded-circle">
+          <p>They love to hang around with their friends to gossip and discuss today´s political topics</p>
+        </div>
+
+      </div>
+   </div>
+
+
+</body>
+<footer>
+  <div id="footer">
+    <p>
+      "I am a footer"
+    </p>
+
+  <ul class="list-inline">
+
+  <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-youtube"></i> </a></li>
+  <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-instagram"></i> </a></li>
+  <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+
+  </ul>
+  </div>
+
+</footer> -->
