--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -5,30 +5,25 @@
   <title>Casestudy Elderme</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container collapsible">
     <!-- <div class="card-portfolio"> -->
     <div>
-      <h2>Goal</h2>
+      <h2>Case study ElderMe</h2>
+      <h3>Goal</h3>
       <p>
-        The web application was to be build within two weeks in a team of three. The product should facilitate the interaction and shared activities of elder persons and volunteers.
-        The users will have accounts with the information about themselves that they want to share and that will help them find people with similar interests.
+        The product should facilitate the interaction and shared activities of elder persons and volunteers.The elder person can choose what activity they are interested in and be shown a selection of volunteers that share that interest. Then they can check out the volunteers profile and send them a meeting request with date and time. The volunteer then can accept or decline the request. If accepted, the meeting will be inserted into the users’ calendar. They can be edited or deleted.
       </p>
 
       <p>
-        The elder person can choose what activity they are interested in and be shown a selection of volunteers that share that interest. Then they can check out the volunteers profile and send them a meeting request with date and time. The volunteer then can accept or decline the request. If accepted, the meeting will be inserted into the users’ calendar. They can be edited or deleted.
-      </p>
-
-      <p>
-        I want to learn how to build a web application with ruby on rails, learn to work in a collaboration and collegial environment and deals with upcoming issues. I want to take charge and be responsible and take ownership if things don’t go the way I planned. DRI - designated responsible individual
-        I personally want to understand routes much better and know when it is necessary to insert more information and how they can or need to be nested in each other
+        This project presented an opportunity to build a web application with ruby on rails from scratch, as well as work in a collaboration and collegial environment. As the DRI (designated responsible individual) of the team it tought me to take charge, be responsible and take ownership of things that didn't go as planned.
       </p>
     </div>
 
     <div>
-      <h2>Approach</h2>
+      <h3>Approach</h3>
       <p>
         The guidelines of this project were specifying that all team members will work on both the front and back end. That brought its own difficulties with it. One were of a personal matter, a certain disinterest or disliking or insecurity in one area.
       </p>
@@ -41,22 +36,25 @@
     <div>
       <h3>First steps:</h3>
       <p>
-        <ul>
-          <li>Setup the rails template, buy a domain name, set up server - Heroku</li>
-          <li>We drew out the different page views with pen and paper.</li>
-          <li>Then we created a new trello project and created the different tasks with specific label colors.</li>
-          <li>We had different columns:
-            Overview: Held all the main groups of tasks, for example the groupings of MVC, model, view and controller, Styling, pop-ups. These cards will not be moved but stay to be consulted and updated, checking off the individual tasks that are in the checklist, that correspond with additional cards
-            To Do, Started, Review, Done. Every individual card corresponds with a feature branch (ideally named the same or similar)
-            In all other columns the cards hold individual tasks that are summed up in the overview cards. They can be assigned individually and get moved from To Do to started to the review (meaning they are finished and pushed to gitHub and are in the process of being reviewed by all other team members). Once the changes are reviewed and approved by everyone, the feature branch holding the changes, will be merged into the master branch, everyone pulls the updated master branch and continue working. The card can be finally moved to the DONE column.
-           All individual cards must have the same color label as the overview cards. Use labels for colourblind to be more inclusive
-          </li>
-        </ul>
+       <ul>
+         <li>Setup the rails template, buy a domain name, set up server - Heroku</li>
+         <li>We drew out the different page views with pen and paper.</li> <!-- add picture? -->
+         <li>Then we created a new trello project and created the different tasks with specific label colors.</li>
+
+         <img src="images/trello_overview.png" alt="Screenshot overview Trello project" class="study-pic">
+         <li>
+          We had different columns:
+           Overview: Held all the main groups of tasks, for example the groupings of MVC, model, view and controller, Styling, pop-ups. These cards will not be moved but stay to be consulted and updated, checking off the individual tasks that are in the checklist, that correspond with additional cards
+           To Do, Started, Review, Done. Every individual card corresponds with a feature branch (ideally named the same or similar)
+           In all other columns the cards hold individual tasks that are summed up in the overview cards. They can be assigned individually and get moved from To Do to started to the review (meaning they are finished and pushed to gitHub and are in the process of being reviewed by all other team members). Once the changes are reviewed and approved by everyone, the feature branch holding the changes, will be merged into the master branch, everyone pulls the updated master branch and continue working. The card can be finally moved to the DONE column.
+          All individual cards must have the same color label as the overview cards. Use labels for colourblind to be more inclusive
+         </li>
+       </ul>
       </p>
     </div>
 
     <div>
-      <h2>Difficulties and Solutions</h2>
+      <h3>Difficulties and Solutions</h3>
 
       <p>
         Difficulties | Solutions
@@ -74,12 +72,12 @@
     </div>
 
 <!--     <div>
-      <h2>Collaboration</h2>
+      <h3>Collaboration</h3>
     </div> -->
 
 
     <div>
-      <h2>Lessons learned</h2>
+      <h3>Lessons learned</h3>
       <ul>
         <li>
           Working in teams is hard. When working on a project by yourself, you are the one with all the strings in hand. You decide in which direction the product will move, what to add, what the MVP should include, how fast to move. In a team, you have to come to a consensus. You have to slow down situations to now jump the gun but follow the order of things.
@@ -124,7 +122,7 @@
     </div>
 
     <div>
-      <h2>Open issues</h2>
+      <h3>Open issues</h3>
       <p>
         <ul>
           <li>Add an OAuth to sign in with gmail or facebook</li>
@@ -135,6 +133,21 @@
         </ul>
       </p>
     </div>
+
+    <h3>Thanks</h3>
+    <p>
+      This was a team effort, I could not have done it without <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> - design/front end, and <a href="https://github.com/M-algbawi" target="_blank">Monther Al Gbawi</a> - front end. It has been a pleasure to work with you!
+    </p>
+
+  </div>
+
+   <div>
+      <ul class="list-inline-item">
+        <li><a href="casestudy_flashcards.html">Read previous case study</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">Contact Me</a></li>
+        <li><a href="casestudy_elderme.html">Read next case study</a></li>
+      </ul>
   </div>
 
 </body>
