--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -3,8 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <title>Casestudy Flashcards</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 </head>
 <body>
+  <div class="container">
+    <h2>Case study Flashcards</h2>
+    <p><em>This project is still in working progress and will be updated with the newest advances soon...</em></p>
+    <!-- <h3>Approach</h3>
 
+
+    <h3>Motivation</h3>
+
+
+    <h3>Features</h3>
+    <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+      <ul>
+        <li></li>
+         <li></li>
+      </ul>
+    </ul>
+
+
+    <h3>Thanks</h3> -->
+    <!-- <p><a href="" target="_blank"></a> design the front end for me, thank you for that!</p> -->
+  </div>
+
+
+   <div>
+      <ul class="list-inline-item">
+        <li><a href="casestudy_calculator.html">Read previous case study</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">Contact Me</a></li>
+        <li><a href="casestudy_elderme.html">Read next case study</a></li>
+      </ul>
+  </div>
 </body>
 </html>
