removing flashcard picture

--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
 
       <div class="card-portfolio">
         <div class="product-pic">
+          <p class="coming-soon"><em>Coming soon</em></p>
           <!-- Photo by William Iven on Unsplash -->
-          <img src="images/william-iven-gcsNOsPEXfs-unsplash.jpg" alt="Placeholder picture work in progress" id="flashcard-pic">
+          <!-- <img src="images/william-iven-gcsNOsPEXfs-unsplash.jpg" alt="Placeholder picture work in progress" id="flashcard-pic"> -->
+          <!-- <img src="images/jessy-smith-McPfYQCpYfw-unsplash.jpg" alt="Placeholder picture work in progress" id="flashcard-pic"> -->
+          <!-- Photo by Jessy Smith on Unsplash -->
         </div>
 
         <div class="card-portfolio-text">
