--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -9,45 +9,49 @@
 </head>
 <body>
   <div class="container">
-    <h2>Case study Visa Calculator</h2>
-    <h3>Approach</h3>
-    <p>
-      This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.
-    </p>
-    <p>
-      The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.
-    </p>
+    <h2 class="title">Case study Visa Calculator</h2>
+    <div class="card-case-study">
+      <h4>Approach</h4>
+      <p>
+        This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.
+      </p>
+      <p>
+        The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.
+      </p>
 
-    <h3>Motivation</h3>
-    <p>
-      Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.
-    </p>
-    <p>
-      Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.
-    </p>
+      <h4>Motivation</h4>
+      <p>
+        Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.
+      </p>
+      <p>
+        Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.
+      </p>
+    </div>
 
-    <h3>Features</h3>
-    <ul>
-    <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
-    <li>Enter first date of entry.</li>
-    <li>The user will be informed when the time frame ends - until when can I plan my 90 days.</li>
-    <li>Multiple trips are calculateable.</li>
-    <li>Previously picked dates are blocked to avoid overlap.</li>
-    <li>Dates after the end of the time frame are blocked for correct results.</li>
-    <li>Trips can be deleted.</li>
-    <li>The amount of days are calculated, once the submit button is hit.</li>
+    <div class="card-case-study">
+      <h4>Features</h4>
       <ul>
-        <li>It informs on how many days are still open to fill the maximum days or how many days need to be removed to be within regulations.</li>
-         <li>It informs the user when the time frame ends.</li>
+      <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
+      <li>Enter first date of entry.</li>
+      <li>The user will be informed when the time frame ends - until when can I plan my 90 days.</li>
+      <li>Multiple trips are calculateable.</li>
+      <li>Previously picked dates are blocked to avoid overlap.</li>
+      <li>Dates after the end of the time frame are blocked for correct results.</li>
+      <li>Trips can be deleted.</li>
+      <li>The amount of days are calculated, once the submit button is hit.</li>
+        <ul>
+          <li>It informs on how many days are still open to fill the maximum days or how many days need to be removed to be within regulations.</li>
+           <li>It informs the user when the time frame ends.</li>
+        </ul>
       </ul>
-    </ul>
+    </div>
 
+    <div class="card-case-study">
+      <h4>Thanks</h4>
+      <p>I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> design the front end for me, thank you for that!</p>
+    </div>
 
-    <h3>Thanks</h3>
-    <p>I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> design the front end for me, thank you for that!</p>
-  </div>
-
-   <div>
+   <div class="card-case-study">
       <ul class="list-inline-item">
         <li><a href="casestudy_elderme.html">Read previous case study</a></li>
         <li><a href="index.html">Home</a></li>
