change text for header and icon color and size

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 <body>
   <div class="container">
     <div class="card-portfolio-top">
-      <div class="product-pic">
+      <div class="product-pic" id="intro">
         <!--  <div id="intro" class="product-pic"> -->
         <img src="images/elisa_profile_pic.jpg" alt="Picture of Elisa" id="profile-pic">
       </div>
 
       <div class="card-portfolio-text">
-        <h2>Hi, my name is Elisa, a back-end developer based in Berlin.</h2>
-        <p>
+        <h2>Hi, I am Elisa, a back end developer and art conservator based in Berlin.</h2>
 
-          <!-- My first passion was art conservation which was my main focus for the past 15 years. Then programming came along and swept me off my feet. I started with self teaching, then concluded a coding boot camp <a href="https://www.lewagon.com/" target="_blank"><img src="images/le-wagon-0e68fc00a50ff351516ca01212d2dd940b4b2b89f3dd1ddaa1c83b307cd829eb.png" alt="icon leWagon" id="le-wagon-picture"></a> and am now working as a back end developer. Please feel free to look at my current and future projects and reach out to me. -->
+        <p>
+          While running my own restoration workshop, I started to teach myself coding.
+          After the <a href="https://www.lewagon.com/" target="_blank"><img src="images/le-wagon-0e68fc00a50ff351516ca01212d2dd940b4b2b89f3dd1ddaa1c83b307cd829eb.png" alt="icon leWagon" id="le-wagon-picture"></a>-boot camp, I now work as a back end developer with focus on Ruby on Rails, excited by learning something new every day.
+          In my free time, you can find me taking extended walks in the forest with the family dog (or if I find the motivation, jogging), solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
+          Please feel free to look at my current and future projects.
         </p>
-        <button type="button" class=" contact collapsible"><a href="#">Contact me</a></button>
+        <button type="button" class="btn contact collapsible"><a href="#">Contact me</a>.</button>
         <div class="content">
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -52,7 +55,6 @@
             <a href="http://www.elderme.live/" target="_blank" class="btn-project">Go to Project</a>
             <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="btn-project">See Code</a>
             <a href="casestudy_elderme.html" class="btn-project">Read case study</a>
-            <!-- <button type="button" class="btn-project">Read Case Study</button> -->
           </div>
         </div>
       </div>
@@ -71,7 +73,6 @@
           <div class="button">
             <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="btn-project">Go to Project</a>
             <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="btn-project">See Code</a>
-                 <!-- Link to Git Hub repo -->
             <!-- button type="button" class="collapsible btn-collapsible" id="collapsible-visa">Read Case Study</button> -->
             <a href="casestudy_calculator.html" class="btn-project">Read case study</a>
           </div>
