--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -28,7 +28,7 @@
       </p>
     </div>
 
-    <div class="card-case-study">
+    <div>
       <h4>Features</h4>
       <ul>
       <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
@@ -46,13 +46,13 @@
       </ul>
     </div>
 
-    <div class="card-case-study">
+    <div>
       <h4>Thanks</h4>
       <p>I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> design the front end for me, thank you for that!</p>
     </div>
 
-   <div class="card-case-study">
-      <ul class="list-inline-item">
+   <div>
+      <ul class="casestudy-directory">
         <li><a href="casestudy_elderme.html">Read previous case study</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="">Contact Me</a></li>
