--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -156,11 +156,11 @@
 
 
    <div>
-      <ul class="list-inline-item">
+      <ul class="casestudy-directory">
         <li><a href="casestudy_flashcards.html">Read previous case study</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="">Contact Me</a></li>
-        <li><a href="casestudy_elderme.html">Read next case study</a></li>
+        <li><a href="casestudy_calculator.html">Read next case study</a></li>
       </ul>
   </div>
 
