--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -40,12 +40,38 @@
 
 
    <div>
-      <ul class="list-inline-item">
+      <ul class="casestudy-directory">
         <li><a href="casestudy_calculator.html">Read previous case study</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="">Contact Me</a></li>
         <li><a href="casestudy_elderme.html">Read next case study</a></li>
       </ul>
-  </div>
+      <!-- <p>
+          <button type="button" class="btn-project" data-toggle="modal" data-target="#exampleModal">
+            Contact Me
+          </button>
+        </div>
+
+        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Contact Information</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <ul class="list-inline">
+                  <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
+                  <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
+                  <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
+                  <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div> -->
 </body>
 </html>
